--- a/about.html
+++ b/about.html
@@ -25,18 +25,10 @@
 				</ul>
 			</header>
 
-	<div role="main">
-    <img src="banner.jpg">
-    <h1 id="this-is-some-markdown">This is some markdown</h1>
-<p>Markdown is better than:</p>
-<ul>
-<li>a poke with a stick</li>
-<li>a kick in the butt</li>
-<li>a long stroll down a short peer</li>
-</ul>
-<p>If you agree, go to <a href="http://haha.com">http://haha.com</a></p>
-
-  </div>
+  <img src="banner.png">
+	<div role="main"><h1 id="about">About</h1>
+<p>Out and about whit markdown and punch</p>
+</div>
 			<footer>
 				<p>Built with <a href="http://laktek.github.com/punch">Punch</a></p>
 			</footer>
@@ -45,3 +37,4 @@
 		</body>
 
 </html>
+
