--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 			<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-			<link rel="stylesheet" type="text/css" media="screen" href="/unless/css/all-1443189947213.css"> 
+			 
     </head>
 
     <body>
@@ -20,8 +20,8 @@
 				<h1>PUNCH!</h1>
 
 				<ul class="navbar">
-					<li><a href="/">home</a>
-					<li><a href="/about">about</a>
+					<li><a href="/unless/">home</a>
+					<li><a href="/unless/about">about</a>
 				</ul>
 			</header>
 
@@ -45,3 +45,4 @@
 		</body>
 
 </html>
+
